force-app/main/default/objects/Case/fields/OriginatingChatSession__c.field-meta.xml
<CustomField>
    <fullName>OriginatingChatSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Chat that created this case</description>
    <label>Originating Chat Session</label>
    <referenceTo>ChatSession__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>