force-app/main/default/objects/Case/fields/OriginatingVoiceCall3__c.field-meta.xml
<CustomField>
    <fullName>OriginatingVoiceCall3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Voice Call that created this case</description>
    <label>Originating Voice Call3</label>
    <referenceTo>Voicecall3__c</referenceTo>
    <relationshipLabel>Primary Cases</relationshipLabel>
    <relationshipName>PrimaryCases</relationshipName>
    <type>Lookup</type>
</CustomField>