force-app/main/default/objects/Case/fields/OriginatingVoiceCall__c.field-meta.xml
<CustomField>
    <fullName>OriginatingVoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original voice call that created this Case.</description>
    <label>Originating Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Primary Cases</relationshipLabel>
    <relationshipName>PrimaryCases</relationshipName>
    <type>Lookup</type>
</CustomField>