force-app/main/default/objects/Case/listViews/DefaultVoiceQueue_Case.listView-meta.xml
<ListView>
    <fullName>DefaultVoiceQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Default Voice Queue</label>
    <queue>DefaultVoiceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>